--- a/week3/Homework/hackyourtemperature/views/index.handlebars
+++ b/week3/Homework/hackyourtemperature/views/index.handlebars
@@ -2,4 +2,7 @@
   City name:<br>
   <input type="text" name="cityName" placeholder="write the name of the city"><br>
   <button type="submit" class="button">Submit</button>
+  <p>{{ weatherText }}</p>
+  <p>{{ errMsg }}</p>
+  <p>{{ cityNotFound }}</p>
 </form>
